# c4-genai-suite

./: .dockerignore  .gitignore  .gitleaks.toml  .semgrepignore  CLINE-PROJECT-CONTEXT.md  CLINE-RULES.txt  CONTRIBUTING.md  Caddyfile  Containerfile  Containerfile.backend  DEVELOPERS.md  DOCKER-DEVELOPMENT.md  Dockerfile  LICENSE  README.md  docker-compose-dev-hotreload.yml  docker-compose-dev.yml  docker-compose.yml  lint-staged.config.js  package-lock.json  package.json
dev/: Caddyfile
services/reis/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Containerfile  Dockerfile  README.md  logging.conf  migrate_from_rag_server.md  pyproject.toml  reis-dev-spec.json
services/reis/docs/: Configuration.md
services/reis/rei_s/: app.py  app_factory.py  config.py  generate_open_api.py  logger_formatter.py  mcp.py  prepare.py  prometheus_server.py  utils.py
services/reis/rei_s/metrics/: metrics.py
services/reis/rei_s/routes/: files.py  health.py
services/reis/rei_s/services/: embeddings_provider.py  multiprocess_utils.py  store_adapter.py  store_provider.py  store_service.py
services/reis/rei_s/types/: dtos.py  source_file.py
services/reis/tests/: conftest.py
services/reis/tests/data/: .gitattributes  birthdays.docx  birthdays.flac  birthdays.json  birthdays.m4a  birthdays.xlsx  birthdays.xml  birthdays.yaml  env_embeddings_missing_azure_deployment.env  env_embeddings_missing_openai_model.env  env_embeddings_only_azure.env  env_embeddings_only_openai.env  env_empty_stt_type.env  env_vectorstore_missing_aisearch_endpoint.env  env_vectorstore_missing_aisearch_key.env  env_vectorstore_missing_pgvector_url.env  env_vectorstore_only_aisearch.env  env_vectorstore_only_pgvector.env  env_wrong_embedding_type.env  env_wrong_store_type.env  response_get_index.py
(+741 files in other folders)
